--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.google.gms.google-services' // <- Add this line // https://rnfirebase.io/
+apply plugin: 'com.google.firebase.crashlytics' // https://rnfirebase.io/crashlytics/android-setup#4-optional-enable-crashlytics-ndk-reporting
 
 import com.android.build.OutputFile
 
@@ -132,7 +134,7 @@ android {
     }
 
     defaultConfig {
-        applicationId 'com.plentimobile'
+        applicationId 'dev.plenti.plenti'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -164,6 +166,10 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            firebaseCrashlytics {
+                nativeSymbolUploadEnabled true
+                unstrippedNativeLibsDir 'build/intermediates/merged_native_libs/release/out/lib'
+            }
         }
     }
 
