--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.plentimobile">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="dev.plenti.plenti">
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
@@ -27,7 +27,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="plentimobile"/>
-        <data android:scheme="com.plentimobile"/>
+        <data android:scheme="dev.plenti.plenti"/>
         <data android:scheme="exp+plentimobile"/>
       </intent-filter>
     </activity>
