--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "plentimobile",
+    "name": "Plenti",
     "slug": "plentimobile",
     "scheme": "plentimobile",
     "version": "1.0.0",
@@ -14,19 +14,17 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.plentimobile.plentimobile"
+      "bundleIdentifier": "dev.plenti.plenti"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.plentimobile"
+      "package": "dev.plenti.plenti"
     },
     "web": {
       "favicon": "./assets/favicon.png"
