--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start --dev-client"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^14.5.1",
     "expo": "^44.0.0",
     "expo-dev-client": "~0.7.2",
     "expo-splash-screen": "~0.14.0",
