--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^14.5.1",
+    "@react-native-firebase/auth": "^14.5.1",
+    "@react-native-firebase/database": "^14.5.1",
+    "@react-native-firebase/messaging": "^14.5.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "expo": "^44.0.0",
     "expo-dev-client": "~0.7.2",
     "expo-splash-screen": "~0.14.0",
@@ -15,10 +20,18 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-paper": "^4.11.2",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/jest": "^27.4.1",
+    "@types/react": "^17.0.41",
+    "@types/react-native": "^0.67.3",
+    "@types/react-test-renderer": "^17.0.1",
+    "typescript": "^4.6.2"
   },
   "name": "plenti-mobile",
   "version": "1.0.0",
