--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-firebase/database": "^14.5.1",
     "@react-native-firebase/messaging": "^14.5.1",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
+    "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "expo": "^44.0.0",
