--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.2",
-    "plenti-api": "^1.0.72",
+    "formik": "^2.2.9",
+    "luxon": "^2.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -28,11 +29,13 @@
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/jest": "^27.4.1",
+    "@types/luxon": "^2.3.1",
     "@types/react": "^17.0.41",
     "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^17.0.1",
