--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "start": "expo start --dev-client"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^14.5.1",
+    "@react-native-community/slider": "^4.2.1",
+    "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/auth": "^14.5.1",
+    "@react-native-firebase/crashlytics": "^14.7.0",
     "@react-native-firebase/database": "^14.5.1",
     "@react-native-firebase/messaging": "^14.5.1",
+    "@react-native-firebase/storage": "^14.7.0",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "axios": "^0.26.1",
     "expo": "^44.0.0",
     "expo-dev-client": "~0.8.4",
+    "expo-image-picker": "~12.0.1",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.2",
