--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start --dev-client"
   },
   "dependencies": {
+    "@config-plugins/android-jsc-intl": "^1.0.3",
     "@react-native-community/slider": "^4.2.1",
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/auth": "^14.5.1",
@@ -24,8 +25,8 @@
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.2",
+    "fecha": "^4.2.1",
     "formik": "^2.2.9",
-    "luxon": "^2.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -41,7 +42,6 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/jest": "^27.4.1",
-    "@types/luxon": "^2.3.1",
     "@types/react": "^17.0.41",
     "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^17.0.1",
