--- a/package.json
+++ b/package.json
@@ -30,11 +30,16 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-device-info": "^8.7.0",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-open-maps": "^0.4.0",
+    "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.11.2",
+    "react-native-permissions": "^3.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "yup": "^0.32.11"
