--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^44.0.0",
     "expo-dev-client": "~0.8.4",
     "expo-image-picker": "~12.0.1",
+    "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.2",
@@ -36,7 +37,6 @@
     "react-native-open-maps": "^0.4.0",
     "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.11.2",
-    "react-native-permissions": "^3.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
