--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "@rneui/base": "^4.0.0-rc.1",
+    "@rneui/themed": "^4.0.0-rc.1",
     "axios": "^0.26.1",
     "expo": "^44.0.0",
     "expo-dev-client": "~0.8.4",
@@ -36,8 +38,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-open-maps": "^0.4.0",
     "react-native-pager-view": "5.4.9",
-    "react-native-paper": "^4.11.2",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-uuid": "^2.0.1",
