--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-open-maps": "^0.4.0",
     "react-native-pager-view": "5.4.9",
+    "react-native-paper": "^4.12.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
