--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-device-info": "^8.7.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-open-maps": "^0.4.0",
     "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.12.0",
