--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@config-plugins/android-jsc-intl": "^1.0.3",
-    "@react-native-community/slider": "^4.2.1",
+    "@react-native-community/slider": "4.1.12",
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/auth": "^14.5.1",
     "@react-native-firebase/crashlytics": "^14.7.0",
@@ -43,7 +43,7 @@
     "react-native-open-maps": "^0.4.0",
     "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.12.0",
-    "react-native-safe-area-context": "^4.2.4",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-uuid": "^2.0.1",
