--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "expo-dev-client": "~0.8.4",
     "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.1",
-    "expo-splash-screen": "~0.14.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.2",
+    "expo-updates": "~0.11.6",
     "fecha": "^4.2.1",
     "formik": "^2.2.9",
     "react": "17.0.1",
@@ -53,15 +53,15 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.41",
-    "@types/react-native": "^0.67.3",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.1",
-    "typescript": "^4.6.2"
+    "typescript": "~4.3.5"
   },
   "name": "plenti-mobile",
   "version": "1.0.0",
