--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "axios": "^0.26.1",
     "expo": "^44.0.0",
     "expo-dev-client": "~0.8.4",
-    "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
@@ -36,9 +35,10 @@
     "react-native": "0.64.3",
     "react-native-device-info": "^8.7.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~2.4.0",
     "react-native-iap": "5.2.6",
     "react-native-iaphub": "^6.4.2",
+    "react-native-image-picker": "^4.7.3",
     "react-native-image-resizer": "^1.4.5",
     "react-native-open-maps": "^0.4.0",
     "react-native-pager-view": "5.4.9",
