--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,6 @@
         <data android:scheme="exp+plentimobile"/>
       </intent-filter>
     </activity>
-    <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
+    <activity android:exported="true" android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
   </application>
 </manifest>
